<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="Make magic"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp" />

    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="80sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom|end"
            android:layout_marginHorizontal="36dp"
            android:maxLines="1"
            android:ellipsize="end"
            />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/Gray.Button"
                android:text="@string/ac"
                android:onClick="onNumberClick"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplay"
                android:onClick="onOperationClick"
                style="@style/Gray.Button"
                android:text="@string/multi"
                android:layout_marginHorizontal="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                android:onClick="onOperationClick"
                style="@style/Gray.Button"
                android:text="@string/percent"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_slash"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/slash"
                />




        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/seven"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                android:onClick="onNumberClick"
                style="@style/Gray.Dark.Button"
                android:text="@string/eight"
                android:layout_marginHorizontal="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                android:onClick="onNumberClick"
                style="@style/Gray.Dark.Button"
                android:text="@string/nine"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/multiplication"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                android:onClick="onNumberClick"
                style="@style/Gray.Dark.Button"
                android:text="@string/four"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                android:onClick="onNumberClick"
                style="@style/Gray.Dark.Button"
                android:text="@string/five"
                android:layout_marginHorizontal="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                android:onClick="onNumberClick"
                style="@style/Gray.Dark.Button"
                android:text="@string/six"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/minus"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"

            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"

                style="@style/Gray.Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/one"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Gray.Dark.Button"
                android:text="@string/two"
                android:onClick="onNumberClick"
                android:layout_marginHorizontal="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Gray.Dark.Button"
                android:text="@string/three"
                android:onClick="onNumberClick"
                android:layout_marginEnd="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/plus"
                />

        </LinearLayout>

        <LinearLayout
            android:paddingVertical="6dp"
            android:gravity="center"
            android:paddingStart="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Gray.Dark.Button"
                android:paddingStart="32dp"
                android:onClick="onNumberClick"
                android:textAlignment="textStart"
                android:layout_width="176dp"
                android:text="@string/zero"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Gray.Dark.Button"
                android:onClick="onOperationClick"
                android:text="@string/dot"
                android:layout_marginHorizontal="16dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equals"
                style="@style/Gray.Dark.Button"
                android:text="@string/equals"
                android:onClick="onOperationClick"
                android:layout_marginEnd="16dp"
                />

        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>